ingress-phpmyadmin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-inrgess
  namespace: default
  labels:
    app: phpmyadmin
spec:
  ingressClassName: public
  rules:
    - host: phpmyadmin.duy.local
      http:
        paths:
          - backend:
              service:
                name: phpmyadmin
                port:
                  name: http
            path: /
            pathType: Prefix
